--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,4 +1,4 @@
 PORT=5000
 
 MONGO_URI=mongodb+srv://harshavardhan15015:harshavardhan15015@dealsdray.6b1qf.mongodb.net/?retryWrites=true&w=majority&appName=DealsDray
-FRONTEND_URL= https://dealsdray-admin-6zts.vercel.app
+FRONTEND_URL=https://dealsdray-admin.vercel.app
